--- a/package.json
+++ b/package.json
@@ -20,12 +20,8 @@
     "config": "^1.21.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.0",
-    "morgan": "^1.7.0",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
-    "passport-google-oauth": "^1.0.0",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "morgan": "^1.7.0"
   }
 }
