--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stock-api",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "Servicio de authenticacion",
   "main": "service.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "config": "^1.21.0",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "jsonwebtoken": "^7.1.9",
