--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express-session": "^1.14.2",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.0",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1"
   }
 }
