--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stock-api",
   "version": "0.1.1",
   "description": "Servicio de authenticacion",
-  "main": "service.js",
+  "main": "server.js",
   "scripts": {
     "start": "SET NODE_ENV=dev&& nodemon server.js",
     "test": "mocha --timeout 5000",
