--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "debug": "^2.4.4",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "express-validator": "^3.1.2",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
