--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "API para control de inventario",
   "main": "server.js",
   "scripts": {
-    "start": "SET NODE_ENV=dev&& nodemon server.js",
+    "start": "node server.js",
     "test": "mocha --timeout 5000",
+    "dev": "SET NODE_ENV=dev&& nodemon server.js",
     "run": "SET NODE_ENV=prod&& nodemon server.js",
     "build": "echo buildme!"
   },
