FIX: demand endpoint
update and add item populate item

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Lucero Sergio Alejandro",
   "license": "MIT",
   "devDependencies": {
+    "autofixture": "^1.1.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "mocha": "^3.0.2"
