--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.3.1",
   "description": "API para control de inventario",
   "main": "server.js",
+  "engines": {
+    "node": "6.11.1"
+  },
   "scripts": {
     "start": "node server.js",
     "test": "mocha --timeout 5000",
